JumpScript/tests/baselines/reference/FunctionDeclaration7_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration7_es6.jump(3,20): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration7_es6.jump (1 errors) ====
    function*bar() {
      // 'yield' here is an identifier, and not a yield expression.
      function*foo(a = yield) {
                       ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
      }
    }